--- a/job-service/src/main/resources/application.properties
+++ b/job-service/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=employee-service
-server.port=8081
+spring.application.name=job-service
+server.port=8082
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:h2:mem:employee-db
+spring.datasource.url=jdbc:h2:mem:job-db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
