Modify Feign and Spring Configuration

--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
 spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
+
+spring.cloud.openfeign.httpclient.connection-timeout=5000
+eureka.client.fetchRegistry=true
+
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
