--- a/job-service/src/main/resources/application.properties
+++ b/job-service/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
 spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
+eureka.client.fetch-registry=true
+eureka.instance.lease-renewal-interval-in-seconds=10
