--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
 spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
