--- a/department-service/src/main/resources/application.yml
+++ b/department-service/src/main/resources/application.yml
@@ -24,6 +24,14 @@ eureka:
     service-url:
       defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
     fetch-registry: true
+    register-with-eureka: true
+    registry-fetch-interval-seconds: 5
+    eureka-service-url-poll-interval-seconds: 5
+    eureka-connection-idle-timeout-seconds: 30
+    eureka-server-connect-timeout-seconds: 5
+    eureka-server-read-timeout-seconds: 10
+    instance-info-replication-interval-seconds: 10
+    initial-instance-info-replication-interval-seconds: 10
   instance:
     prefer-ip-address: true
 
