--- a/gateway-service/build.gradle
+++ b/gateway-service/build.gradle
@@ -5,8 +5,12 @@ plugins {
 }
 
 group = 'com.example'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 sourceCompatibility = '17'
+
+bootJar {
+    archiveFileName = "${archiveBaseName.get()}.${archiveExtension.get()}"
+}
 
 repositories {
     mavenCentral()
