--- a/job-service/build.gradle
+++ b/job-service/build.gradle
@@ -7,8 +7,12 @@ plugins {
 }
 
 group = 'com.example'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 sourceCompatibility = '17'
+
+bootJar {
+    archiveFileName = "${archiveBaseName.get()}.${archiveExtension.get()}"
+}
 
 configurations {
     compileOnly {
@@ -23,6 +27,10 @@ repositories {
 
 ext {
     set('springCloudVersion', "2022.0.1")
+}
+
+openApi {
+    apiDocsUrl.set("http://localhost:8082/rest-api-docs")
 }
 
 dependencies {
