--- a/gateway-service/build.gradle
+++ b/gateway-service/build.gradle
@@ -24,7 +24,7 @@ ext {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
-
+    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.0.2'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
