--- a/employee-service/build.gradle
+++ b/employee-service/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-common', version: '2.0.2'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 dependencyManagement {
