--- a/job-service/build.gradle
+++ b/job-service/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     testImplementation 'org.springframework.amqp:spring-rabbit-test'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 dependencyManagement {
